update productos section y pagina, loader

--- a/src/components/sections/ProductsSection.astro
+++ b/src/components/sections/ProductsSection.astro
@@ -51,6 +51,7 @@ try {
                   <ProductCard 
                     product={product} 
                     class="h-full"
+                    href="/productos"
                   />
                 </div>
               ))}
